# argus

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  seed_forms.example.yml
src/: __main__.py  cli.py  config.py  crawler.py  findings.py  http_client.py  logger.py  scan_result.py  scanner.py  seed_forms.py
src/detectors/: __init__.py  base.py  headers.py  sqli.py  xss.py
src/llm/: deepseek_client.py  triage.py
src/reporters/: __init__.py  base.py  html_writer.py  json_writer.py  terminal.py
tests/: test_cli.py  test_crawler.py  test_deepseek_client.py  test_headers_detector.py  test_html_reporter.py  test_reporters.py  test_scanner.py  test_seed_forms.py  test_sqli_detector.py  test_triage.py  test_xss_detector.py
