[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-scanner"
version = "0.1.0"
description = "AI-powered web application vulnerability scanner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kehinde Adetunji Tosin" },
]
keywords = ["security", "vulnerability", "scanner", "web", "owasp", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/Kentunji/argus"
Issues = "https://github.com/Kentunji/argus/issues"

[project.scripts]
argus = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
